--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,15 +6,23 @@
     <link rel="stylesheet" href="/index.css">
     <title>Mini Messaging App</title>
 </head>
+<nav>
+    <ul>
+        <li><a href="http://localhost:3000/new">Add a new message</a></li>
+    </ul>
+</nav>
 <body>
     <dl>
         <% messages.forEach((el,i) => { %>
-            <dt>User</dt>
-            <dd><%= el.user %></dd>
-            <dt>Text</dt>
-            <dd><%= el.text %></dd>
-            <dt>Date</dt>
-            <dd><%= el.added %></dd>
+            <div>
+                <dt>User</dt>
+                <dd><%= el.user %></dd>
+                <dt>Text</dt>
+                <dd><%= el.text %></dd>
+                <dt>Date</dt>
+                <dd><%= el.added %></dd>
+            </div>
+            <button type="button">View Details</button>
             <% if (i < messages.length-1)  { %>
                 <hr>
             <% } %>
