--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <nav>
     <ul>
-        <li><a href="http://localhost:3000/new">Add a new message</a></li>
+        <li><a href="new">Add a new message</a></li>
     </ul>
 </nav>
 <body>
@@ -22,7 +22,11 @@
                 <dt>Date</dt>
                 <dd><%= el.added %></dd>
             </div>
-            <form method="GET" action="/details?index=<%= i %>"><button type="submit">View Details</button></form>
+            <a href="details"></a>
+            <form method="GET" action="/details">
+                
+                <input type="hidden" name="index" value="<%= i %>" /> 
+                <button type="submit">View Details</button></form>
             <% if (i < messages.length-1)  { %>
                 <hr>
             <% } %>
