--- a/views/form.ejs
+++ b/views/form.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form method="POST" action="/new/<%= index %>">
-        <h1>Add New Message</h1>
+        <h1><% if (text) { %> Message <% } else { %> Add New Message <% } %></h1>
         <label for="textmsg">
             Message:
             <% if (text) { %>
