--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,11 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 dl {
-display: grid;
+    display: grid;
     grid-template-rows: auto auto;
     grid-template-columns: auto auto;
     justify-content: center;
@@ -7,8 +13,12 @@ display: grid;
     align-content: center;
     justify-items: center;
     row-gap: .5rem;
+    font-size: smaller;
 }
 
+dl div {
+    width: 100%;
+}
 hr {
     grid-column: 1 / 3;
     width: 100%;
@@ -38,13 +48,35 @@ button {
     font-weight: 540;
 }
 
+nav {
+    margin: 1rem !important;
+}
+dt {
+    text-align: center;
+    width: 100%;
+}
 dl, ul {
+    max-width: 50dvw;
+    min-width: 50dvw;
     list-style-type: none;
 }
-
-dd {
-    background-color: aliceblue;
+dl {
+    margin: auto;
+    width: 100%;
 }
+dd {
+    width: 100%;
+    font-size: larger;
+    background-color: aliceblue;
+    padding: .3rem;
+}
+
+
+dd:nth-of-type(odd) {
+    font-size: .8rem;
+}
+
+
 
 dt:nth-child(odd) {
     background-color: rgb(212, 234, 254);
