fix: add validation and remaining functions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
             </div>
             <form method="GET" action="/details">
                 
-                <input type="hidden" name="index" value="<%= i %>" /> 
+                <input type="hidden" name="id" value="<%= el.id %>" /> 
                 <button type="submit">Edit Details</button></form>
             <% if (i < messages.length-1)  { %>
                 <hr>
