--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,7 +7,7 @@
     <title>New Message Form</title>
 </head>
 <body>
-    <form method="POST" action="/new/<%= index %>">
+    <form method="POST" action="/new/<%= id %>">
         <h1><% if (text) { %> Message <% } else { %> Add New Message <% } %></h1>
         <label for="textmsg">
             Message:
