--- a/public/index.css
+++ b/public/index.css
@@ -27,7 +27,7 @@ hr {
 button {
     width: 70px;
     aspect-ratio: 1;
-    border: 1px solid blue;
+    border: 1px solid rgb(0, 39, 139);
     padding: 5px;
     margin: 5px;
     background-color:aliceblue;
